force-app/main/default/objects/Class__c/fields/ClassSubject__c.field-meta.xml
<CustomField>
    <fullName>ClassSubject__c</fullName>
    <label>Class Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>