force-app/main/default/objects/Class__c/fields/ClassTopic__c.field-meta.xml
<CustomField>
    <fullName>ClassTopic__c</fullName>
    <label>Class Topic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ClassSubject__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ClassTopic</valueSetName>
    </valueSet>
</CustomField>