force-app/main/default/objects/Class__c/fields/NumberOfStudents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudents__c</fullName>
    <label>Number Of Students</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>