force-app/main/default/objects/Class__c/validationRules/ClassNameFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>ClassNameFormat</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Name, &quot;[A-Z]{3}[0-9]{3}&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter class  name with the format of XXX###.  For example, History 100 should be entered as HIS100</errorMessage>
</ValidationRule>