force-app/main/default/objects/Class__c/validationRules/EndDateNotWeekend.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateNotWeekend</fullName>
    <active>true</active>
    <errorConditionFormula>(WEEKDAY( StartDate__c ) = 1)
||
(WEEKDAY( EndDate__c ) = 7)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>May not be Saturday or Sunday</errorMessage>
</ValidationRule>