force-app/main/default/objects/Class__c/validationRules/StartDateNotWeekend.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateNotWeekend</fullName>
    <active>true</active>
    <errorConditionFormula>(WEEKDAY( StartDate__c )  = 1) || (WEEKDAY( StartDate__c ) = 7)</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>May not be Saturday or Sunday</errorMessage>
</ValidationRule>